--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -28,50 +28,20 @@
         else {
           const artistsDiv = document.getElementById("artists");
           const data = JSON.parse(localStorage.artists);
-          for (let artist of data) {
-            artistsDiv.innerHTML += `<div class="artist" title="Click for more info">
-    <div class="flipper">
-      <div class="front">
-        <img src=${artist.image}>
-      </div>
-      <div class="back">
-        <h4>${artist.name}</h4>
-        <p>published: ${artist.published}</p>
-        <p>listeners: ${artist.listeners}</p>
-        <p>playcount: ${artist.playcount}</p>
-      </div>
-    </div>
-  </div>`;
-          }
+          addArtistsToDiv(data);
         }
       }
       renderArtists();
 
-      $("#searchArtistForm").submit(() => {
+      $("#searchArtistForm").submit((event) => {
         event.preventDefault();
         var inputVal = $("#searchArtistInput").val().toLowerCase();
         const data = JSON.parse(localStorage.artists);
-        const artistsDiv = document.getElementById("artists");
         let filteredData = data;
-        artistsDiv.innerHTML = "";
         if (inputVal !== '') {
           filteredData = data.filter(artist => artist.name.toLowerCase().startsWith(inputVal));
         }
-        for (let artist of filteredData) {
-          artistsDiv.innerHTML += `<div class="artist" title="Click for more info">
-    <div class="flipper">
-      <div class="front">
-        <img src=${artist.image}>
-      </div>
-      <div class="back">
-        <h4>${artist.name}</h4>
-        <p>published: ${artist.published}</p>
-        <p>listeners: ${artist.listeners}</p>
-        <p>playcount: ${artist.playcount}</p>
-      </div>
-    </div>
-  </div>`;
-        }
+        addArtistsToDiv(filteredData);
       })
 
       $(document).on("click", ".back", function (event) {
@@ -259,7 +229,7 @@
   <h3 class="favTitle" style="display: inline-block;">${song.name}</h3>
   <p class="favP">${song.artistName}</p>
   <br>
-  <i id="heart" class="fa fa-heart-o" style="font-size: 16px; color: red;"></i>
+  <i class="fa fa-heart-o" style=color:red;"></i>
 </a>
 `;
           favoritesDiv.append(songDiv);
@@ -301,11 +271,10 @@
     const lastfmKey = "d6293ebc904c9f3e71bf638f0b55a5f6";
 
     function successCBAllArtists(data) {
-      const artistsDiv = document.getElementById("artists");
       const artistsArr = [];
+      let count = data.length;
       for (let artist of data) {
         const api = `${lastfmBaseAPi}/?method=artist.getinfo&artist=${artist.name}&api_key=${lastfmKey}&format=json`;
-
         ajaxCall("GET", api, "", function (data) {
           const artistObj = data.artist;
           const name = artistObj.name;
@@ -314,29 +283,39 @@
           const listeners = artistObj.stats.listeners;
           const playcount = artistObj.stats.playcount;
           const published = artistObj.bio.published.split(",")[0];
-          const res = { name, summary, image, listeners, playcount, published };
-
-          artistsDiv.innerHTML += `<div class="artist">
-        <div class="flipper">
-          <div class="front">
-            <img src=${res.image}>
-          </div>
-          <div class="back">
-            <h4>${res.name}</h4>
-            <p>published: ${res.published}</p>
-            <p>listeners: ${res.listeners}</p>
-            <p>playcount: ${res.playcount}</p>
-          </div>
-        </div>
-      </div>`;
-
+          const res = { name, summary, listeners, playcount, published, image };
           artistsArr.push(res);
-          localStorage.artists = JSON.stringify(artistsArr);
+          count -= 1;
+          if (count === 0) {
+            localStorage.artists = JSON.stringify(artistsArr);
+            addArtistsToDiv(artistsArr);
+          }
         }, function (error) {
           errorCB(error);
         });
       }
     }
+
+    function addArtistsToDiv(data) {
+      const artistsDiv = document.getElementById("artists");
+      artistsDiv.innerHTML = "";
+      for (let artist of data) {
+        artistsDiv.innerHTML += `<div class="artist">
+          <div class="flipper">
+            <div class="front">
+              <img src=${artist.image}>
+            </div>
+            <div class="back">
+              <h4>${artist.name}</h4>
+              <p>published: ${artist.published}</p>
+              <p>listeners: ${artist.listeners}</p>
+              <p>playcount: ${artist.playcount}</p>
+            </div>
+          </div>
+        </div>`;
+      }
+    }
+
   </script>
 
 </head>
@@ -402,19 +381,19 @@
                     <h3 class="randTitle" style="display: inline-block;"></h3>
                     <p class="randPara"></p>
                     <br>
-                    <i class="fa fa-heart-o " style="font-size:16px;"></i>
+                    <i class="fa fa-heart-o "></i>
                   </a>
                   <a class="randSongs">
                     <h3 class="randTitle"></h3>
                     <p class="randPara"></p>
                     <br>
-                    <i class="fa fa-heart-o " style="font-size:16px;"></i>
+                    <i class="fa fa-heart-o "></i>
                   </a>
                   <a class="randSongs">
                     <h3 class="randTitle"></h3>
                     <p class="randPara"></p>
                     <br>
-                    <i class="fa fa-heart-o" style="font-size:16px;"></i>
+                    <i class="fa fa-heart-o"></i>
                   </a>
                 </div>
               </div>
@@ -476,8 +455,9 @@
                   <div class="work-request--information">
                     <form id="searchArtistForm">
                       <input id="searchArtistInput" type="text" name="search" placeholder="Search">
-                      <button id="searchArtistBtn">Search</button>
+                      <button class="artiststBtns" id="searchArtistBtn">Search</button>
                     </form>
+                    <button class="artiststBtns" id="showAllArtistsBtn">Show All</button>
                   </div>
                 </div>
                 <div id="artistsContainer">
@@ -734,7 +714,7 @@
         title: `${data.name} Lyrics`,
         html: `<div class="song-popup">${data.lyrics.replace(/\n/g, '<br>')}</div>
                <br>
-               <i id="addToFavorites" class="fa fa-heart-o" title="Add to Favorite" style="font-size: 16px; color: white;"></i>`,
+               <i id="addToFavorites" class="fa fa-heart-o" title="Add to Favorite" style="color: white;"></i>`,
         color: 'white',
         background: '#171717',
         confirmButtonText: "Close",
